--- a/Airbnb/Extent-Report/ExtentReport.html
+++ b/Airbnb/Extent-Report/ExtentReport.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-06-18 12:46:12</span>
+					<span class='suite-started-time'>2020-06-18 16:58:01</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,25 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 14s+298ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 37s+185ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 14s+298ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 37s+185ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-06-18 12:45:58</span> 
+							<span class='panel-lead suite-started-time'>2020-06-18 16:57:23</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-06-18 12:46:12</span> 
+							<span class='panel-lead suite-ended-time'>2020-06-18 16:58:01</span> 
 						</div> 
 					</div>
 				</div>
@@ -273,17 +273,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='74640d75-2426-4c99-b92a-97ee8eb19113'>
+										<li class='collection-item test displayed active pass ' extentid='36120e58-51c9-4cd4-a8d3-a1692bc2b0f6'>
 											<div class='test-head'>
-												<span class='test-name'>exxceel </span>
+												<span class='test-name'>PRICEMAX </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide  airbnbtesthomepagetest'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-06-18 12:46:09</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-06-18 12:46:10</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 1s+129ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-06-18 16:57:42</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-06-18 16:57:59</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 16s+554ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -303,7 +303,7 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>12:46:10</td>
+																	<td class='timestamp'>16:57:59</td>
 																	<td class='step-details'>Test Passed</td>
 																</tr>
 														</tbody>
@@ -386,8 +386,8 @@
 															</thead>
 															<tbody>
 																	<tr class='pass'>
-																		<td>2020-06-18 12:46:09</td>
-																		<td><span class='category-link linked' extentid='74640d75-2426-4c99-b92a-97ee8eb19113'>exxceel</span></td>
+																		<td>2020-06-18 16:57:42</td>
+																		<td><span class='category-link linked' extentid='36120e58-51c9-4cd4-a8d3-a1692bc2b0f6'>PRICEMAX</span></td>
 																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 															<tbody>
