--- a/Fox_News/Extent-Report/ExtentReport.html
+++ b/Fox_News/Extent-Report/ExtentReport.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-06-20 20:27:17</span>
+					<span class='suite-started-time'>2020-06-24 17:24:22</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,25 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 13s+100ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 31s+375ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 13s+100ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 31s+375ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-06-20 20:27:04</span> 
+							<span class='panel-lead suite-started-time'>2020-06-24 17:23:51</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-06-20 20:27:17</span> 
+							<span class='panel-lead suite-ended-time'>2020-06-24 17:24:22</span> 
 						</div> 
 					</div>
 				</div>
@@ -205,7 +205,7 @@
 									<tbody>
 											<tr>
 												<td>
-													TestFoxHomePage
+													TestFoxNewsBrokenLinks
 												</td>
 											</tr>
 									</tbody>
@@ -241,7 +241,7 @@
 										<i class='mdi-maps-local-offer'></i>
 									</a>
 									<ul id='category-toggle' class='dropdown-content'>
-											<li class='TestFoxHomePage'><a href='#!'>TestFoxHomePage</a></li>
+											<li class='TestFoxNewsBrokenLinks'><a href='#!'>TestFoxNewsBrokenLinks</a></li>
 										<li class='divider'></li>
 										<li class='clear'><a href='#!'>Clear Filters</a></li>
 									</ul>
@@ -273,22 +273,22 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='677058f1-8f37-4970-8a9d-b275fc600687'>
+										<li class='collection-item test displayed active pass ' extentid='0ee410fd-08e8-4111-966c-a2926aff4a62'>
 											<div class='test-head'>
-												<span class='test-name'>testClickOnMore </span>
+												<span class='test-name'>testBrokenLinks </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  testfoxhomepage'></span>
+												<span class='category-assigned hide  testfoxnewsbrokenlinks'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-06-20 20:27:13</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-06-20 20:27:16</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 3s+406ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-06-24 17:23:59</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-06-24 17:24:21</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 22s+219ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
 														<div class='categories'>
-																<span class='category text-white'>TestFoxHomePage</span>
+																<span class='category text-white'>TestFoxNewsBrokenLinks</span>
 														</div>
 												</div>
 												<div class='test-steps'>
@@ -303,7 +303,7 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:27:16</td>
+																	<td class='timestamp'>17:24:21</td>
 																	<td class='step-details'>Test Passed</td>
 																</tr>
 														</tbody>
@@ -362,7 +362,7 @@
 									<ul id='cat-collection' class='cat-collection'>
 											<li class='category-item displayed'>
 												<div class='cat-head'>
-													<span class='category-name'>TestFoxHomePage</span>
+													<span class='category-name'>TestFoxNewsBrokenLinks</span>
 												</div>
 												<div class='category-status-counts'>
 														<span class='pass label dot'>Pass: 1</span>
@@ -386,8 +386,8 @@
 															</thead>
 															<tbody>
 																	<tr class='pass'>
-																		<td>2020-06-20 20:27:13</td>
-																		<td><span class='category-link linked' extentid='677058f1-8f37-4970-8a9d-b275fc600687'>testClickOnMore</span></td>
+																		<td>2020-06-24 17:23:59</td>
+																		<td><span class='category-link linked' extentid='0ee410fd-08e8-4111-966c-a2926aff4a62'>testBrokenLinks</span></td>
 																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 															<tbody>
